[package]
name = "cargo-ninety-nine"
version = "0.0.1"
authors = ["Jason Ridgway-Taylor <jason@glottologist.co.uk>"]
description = "A cargo plugin for finding and tracking flaky tests"
keywords = ["cargo", "flaky", "tests"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://glottologist.github.io/ninety-nine"
homepage = "https://glottologist.github.io/ninety-nine/"
repository = "https://github.com/glottologist/ninety-nine"
readme = "README.md"
edition = "2024"

[[bin]]
name = "cargo-ninety-nine"

[dependencies]
