[package]
name = "cargo-ninety-nine"
version = "0.2.5"
authors = ["Jason Ridgway-Taylor <jason@glottologist.co.uk>"]
description = "A cargo plugin for finding and tracking flaky tests"
keywords = ["cargo", "flaky", "tests"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
documentation = "https://docs.rs/cargo-ninety-nine"
homepage = "https://glottologist.github.io/ninety-nine/"
repository = "https://github.com/glottologist/ninety-nine"
license = "MIT"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
exclude = ["claude/", "docs/book/", ".github/", ".claude/", ".devbox/", "proptest-regressions/"]

[[bin]]
name = "cargo-ninety-nine"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
statrs = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
colored = "2.1"
cargo_metadata = "0.19"
duct = "0.13"
rusqlite = { version = "0.33", features = ["bundled"] }
which = "7.0"
dirs = "6.0"
regex = "1.11"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
indicatif = "0.17"

[lints.rust]
async_fn_in_trait = "allow"

[dev-dependencies]
proptest = "1.6"
rstest = "0.24"
tempfile = "3.14"
